--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Snowburst+One" rel="stylesheet">
 
   <meta name="theme-color" content="#000000">
   <!--
